@@ -1074,7 +1074,7 @@ qc pass: tls with rsa
 qc pass: tls with ecdsa
 qc pass: tls with mldsa
 qc pass: wireguard over ipv4
-failed: wireguard over ipv6
+qc pass: wireguard over ipv6
 qc pass: wireguard over wireguard
 qc pass: wireguard over loopback
 qc pass: wireguard over asymmetric ports
